# SiMSynth

./: Cargo.toml  LICENSE  README.md
Docs/: plan
docs/: plan  umlDiagram.puml
src/: main.rs
