[package]
name = "simple-music-synthesizer"
version = "0.1.0"
edition = "2024"
license = "MIT"
include = ["LICENSE", "**/*.rs", "Cargo.toml"]


[dependencies]
eframe = { version = "0.34.3", features = ["glow"] }
egui = "0.34.3"
env_logger = "0.11.10"
rodio = { version = "0.22.2", features = ["playback"] }

[profile.release]
opt-level = 2
