[package]
name = "simple-music-synthesizer"
version = "0.3.0-alpha"
authors = ["Melissa Vernigorenko"]
edition = "2024"
repository = "https://github.com/silverfairies/SimpSynth"
license = "MIT"
keywords = ["synthesizer"]
categories = ["multimedia::audio"]
exclude = []
include = ["**/*.rs", "!src/app.rs", "!src/music.rs"]

[dependencies]
eframe = { version = "0.34.3", features = ["default_fonts", "glow", "wayland", "x11"], default-features = false }
egui-winit = { version = "0.34.3", default-features = false, features = ["wayland", "x11"] }
env_logger = "0.11.10"
rodio = { version = "0.22.2", default-features = false, features = ["64bit", "playback"] }

[profile.dev.package."*"]
opt-level = 3
codegen-units = 1

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1
strip = true
debug = 0
opt-level = "z"
